default/objects/FS_Tree_Province__mdt/FS_Tree_Province__mdt.object-meta.xml
<CustomObject>
    <label>FS_Tree_Province</label>
    <pluralLabel>FS_Tree_Provinces</pluralLabel>
</CustomObject>