default/objects/FS_Tree_Province__mdt/fields/Allowed_Call_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Call_Time_From__c</fullName>
    <description>Allowed Time To Make Call to the region from GMT+3 timezone</description>
    <inlineHelpText>Ex: &quot;09:00:00&quot;</inlineHelpText>
    <label>Allowed Call Time From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>