default/objects/FS_Tree_Province__mdt/fields/Alternative_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Names__c</fullName>
    <label>Alternative Names</label>
    <length>80</length>
    <type>Text</type>
</CustomField>