default/objects/FS_Tree_Province__mdt/fields/Assigned_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team_Lead__c</fullName>
    <label>Assigned_Team_Lead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>