default/objects/FS_Tree_Province__mdt/fields/FS_Territory__c.field-meta.xml
<CustomField>
    <fullName>FS_Territory__c</fullName>
    <label>FS_Territory</label>
    <referenceTo>FS_Territory__mdt</referenceTo>
    <relationshipLabel>FS_Tree_Provinces</relationshipLabel>
    <relationshipName>FS_Tree_Provinces</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>