default/objects/FS_Tree_Province__mdt/fields/FS_Tree_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Tree_Country__c</fullName>
    <label>FS_Tree_Country</label>
    <referenceTo>FS_Tree_Country__mdt</referenceTo>
    <relationshipLabel>FS_Tree_Provinces</relationshipLabel>
    <relationshipName>FS_Tree_Provinces</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>