default/objects/FS_Tree_Province__mdt/fields/OKATO__c.field-meta.xml
<CustomField>
    <fullName>OKATO__c</fullName>
    <label>OKATO</label>
    <length>5</length>
    <type>Text</type>
</CustomField>