default/objects/FS_Tree_Province__mdt/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Time zone of the region</description>
    <inlineHelpText>Ex: &quot;+02:00&quot;</inlineHelpText>
    <label>Time Zone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>